# WebSocketUniversal

./: README.md
example/ws_client_demo/: CMakeLists.txt  main.cpp
example/ws_server_node_js/: server.js
lib/linux/x32/: demo
lib/macos/: demo  libixwebsocket.11.3.2.dylib
lib/windows/x32/: ixwebsocket.exp  ixwebsocket.lib
lib/windows/x64/: ixwebsocket.exp  ixwebsocket.lib
